--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,8 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    # url: /cv/
+    url: /files/cv.pdf
     
   - # title: "Guide"
     # url: /markdown/
