--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
     
   - title: "CV"
     # url: /cv/
-    url: /files/cv.pdf
+    url: /files/CV.pdf
     
   - # title: "Guide"
     # url: /markdown/
