--- a/_config.yml
+++ b/_config.yml
@@ -248,6 +248,16 @@ defaults:
       author_profile: true
       share: true
 
+ # _research
+  - scope:
+      path: ""
+      type: research
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+
 # Sass/SCSS
 sass:
   sass_dir: _sass
