--- a/_config.yml
+++ b/_config.yml
@@ -94,12 +94,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "https://www.facebook.com/langqi.xing/"
   foursquare       :
   github           : "LangqiXing"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "https://www.instagram.com/kuangduam/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "www.linkedin.com/in/langqi-xing-19316a211"
