--- a/_config.yml
+++ b/_config.yml
@@ -94,22 +94,22 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/langqi.xing/"
+  facebook         : "Langqi Xing"
   foursquare       :
   github           : "LangqiXing"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/kuangduam/"
+  instagram        : "kuangduam"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "www.linkedin.com/in/langqi-xing-19316a211"
+  linkedin         : "Langqi (Michael) Xing"
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-5880-5819"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/Langqi_Xing"
+  twitter          : "Langqi_Xing"
   vine             :
   weibo            :
   xing             :
