--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "Langqi Xing"
+  facebook         : "langqi.xing"
   foursquare       :
   github           : "LangqiXing"
   google_plus      :
@@ -102,7 +102,7 @@ author:
   instagram        : "kuangduam"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "Langqi (Michael) Xing"
+  linkedin         : "langqi-xing-19316a211"
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-5880-5819"
   pinterest        :
   soundcloud       :
