--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        : "kuangduam"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "langqi-xing-19316a211"
+  linkedin         : "langqi-xing-langqixing0828"
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-5880-5819"
   pinterest        :
   soundcloud       :
