--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Langqi's Homepage"
 title_separator          : "-"
 name                     : &name "Langqi Xing"
-description              : &description "PhD student at NEU"
+description              : &description "Ph.D. student at NEU"
 url                      : https://langqixing.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "LangqiXing/langqixing.github.io"
