--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Boston, USA"
   employer         :
   pubmed           :
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=FPgD4tIAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=wagh4yIAAAAJ"
   email            :
   researchgate     : "https://www.researchgate.net/profile/Langqi-Xing"
   uri              :
